--- a/apiforadding/src/main/resources/application.properties
+++ b/apiforadding/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=apiforadding
 # Correcting the PostgreSQL connection URL and dialect
 spring.datasource.url=jdbc:postgresql://localhost:5432/itemdb
 spring.datasource.username=postgres
-spring.datasource.password=prashant123
+spring.datasource.password=
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
